# NeuVC-for-Windows

./: .gitignore  CMakeLists.txt  README.md
Lib/Components/: UIDefines.h
Lib/DSP/: Resampler.cpp  Resampler.h
Lib/Utils/: AudioUtils.cpp  AudioUtils.h
NeuVC/: app.manifest  resources.rc
NeuVC/Assets/traced/: read this.txt
NeuVC/Assets/traced/inputs/: readme.txt
NeuVC/Assets/traced/rvc_trained/: readme.txt
NeuVC/PluginSources/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.cpp  ProcessorBase.h
NeuVC/Source/: Player.cpp  Player.h  SourceAudioManager.cpp  SourceAudioManager.h
NeuVC/Source/Components/: AudioContainer.cpp  AudioContainer.h  AudioFileDrag.cpp  AudioFileDrag.h  AudioFileWriter.hpp  AudioRegion.cpp  AudioRegion.h  NeuVCLNF.cpp  NeuVCLNF.h  NeuVCMainView.cpp  NeuVCMainView.h  Playhead.cpp  Playhead.h
NeuVC/Source/Components/Views/: VisualizationPanel.cpp  VisualizationPanel.h
NeuVC/Source/RVC/: main.cpp  rvc.cpp  rvc.h
